10346 ld(1) should not reduce symbol visibility of COMDAT symbols when producing relocatable objects Reviewed by: Toomas Soome <tsoome@me.com> Reviewed by: Robert Mustacchi <rm@joyent.com> Approved by: Dan McDonald <danmcd@joyent.com>